4_k8s/2-status/4-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: status
  name: smokeping
  labels:
    app: smokeping
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smokeping
  template:
    metadata:
      labels:
        app: smokeping
    spec:
      containers:
        - name: smokeping
          image: linuxserver/smokeping:latest
          ports:
            - name: web
              containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config
              mountPath: "/config"
            - name: data
              mountPath: "/data"
      securityContext:
        fsGroup: 1006
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: smokeping-config
        - name: data
          persistentVolumeClaim:
            claimName: smokeping-data
