4_k8s/2-status/5-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: status
  name: smokeping
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`status.ar.olumpos.net`)
      kind: Rule
      services:
        - name: smokeping
          port: 80
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: status
  name: smokeping-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.ar.olumpos.net`)
      kind: Rule
      services:
        - name: smokeping
          port: 80
