4_k8s/2-status/51-smokeping-status-ar.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: status
  name: smokeping
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`status.ar.olumpos.net`)
      kind: Rule
      services:
        - name: smokeping
          port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: status
  name: smokeping-tls
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`status.ar.olumpos.net`)
      kind: Rule
      services:
        - name: smokeping
          port: 80
  tls:
    certResolver: letsencrypt
    domains:
      - main: status.ar.olumpos.net
